--- a/package.json
+++ b/package.json
@@ -2,8 +2,19 @@
   "name": "expressapi",
   "version": "1.0.0",
   "description": "express api",
-  "main": "index.js",
+  "main": "app.js",
   "repository": "git@github.com:mhgarry/nautours-api-nodejs-course.git",
   "author": "mhgarry92 <mhgarry92@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  }
 }
