--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "nodemon": "^3.0.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
